# person-to-place

./: .eslintignore  .gitignore  .prettierignore  .prettierrc  README.md  package.json  pnpm-lock.yaml  svelte.config.js
.github/workflows/: run-checks.yml  tauri-publish.yml  tauri-test-on-pr.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json5
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: index.ts
src/lib/components/: Modal.svelte  index.ts
src/lib/components/Combobox/: ClearInputIcon.svelte  Combobox.svelte  index.ts
src/lib/components/Header/: InsertEntry.svelte  Modal.svelte  SaveStatus.svelte  SelectPlace.svelte  SettingsIcon.svelte  SiteSearch.svelte  Tooltip.svelte  UserPreferences.svelte
src/lib/components/SelectPlace/: SelectPlace.svelte  index.ts
src/lib/components/SelectPlace/Combobox/: Combobox.svelte  index.ts
src/lib/components/TimezoneTable/: DeleteEntry.svelte  EditEntry.svelte  InsertEntry.svelte  SearchIcon.svelte  SortableTH.svelte  TBody.svelte  THead.svelte  Table.svelte  TableHeader.svelte  TableLabel.svelte  mockdata.ts  utils.ts
src/lib/icons/: ChevronDoubleDown.svelte  ChevronDoubleUp.svelte  ChevronDown.svelte  ChevronUp.svelte  ChevronUpDown.svelte  DeleteIcon.svelte  EditIcon.svelte  InfoIcon.svelte  InsertIcon.svelte  index.ts
src/routes/: +layout.svelte  +page.svelte  global.css
src/types/: Place.ts  Store.ts
src/utils/: guid.ts  index.ts  store-consts.ts  stores.ts
